Add angular2 websocket

--- a/app/VIEW/MainContent/Roughneck/roughneck.template.html
+++ b/app/VIEW/MainContent/Roughneck/roughneck.template.html
@@ -4,4 +4,6 @@
 <h1>{{ mainHeading }}</h1>
 
 <!--Use motortype1 component-->
-<motortype1 [(tagname)] = "instMotor1"> </motortype1>
+<motortype1 tagname = "Motor1Tag"> </motortype1>
+<br><br>
+<motortype1 tagname = "Motor2Tag"> </motortype1>
