--- a/app/VIEW/Templates/Motors/MotorType1/motortype1.template.html
+++ b/app/VIEW/Templates/Motors/MotorType1/motortype1.template.html
@@ -1,6 +1,7 @@
 <link type="text/css" rel="stylesheet" href="./motortype1.styles.css"/>
 
 <!--DRAW the Motor1Visal here-->
+<div > Count: {{ counter }} </div>
 <div > {{ _model._tag }} </div>
 <div > {{ _model._id }} </div>
 <div > {{ _model._start }} </div>
